<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenuActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp" >

        <Button
            android:id="@+id/personal_info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="viewPersonalInfo"
            android:text="@string/personal_info" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <Button
            android:id="@+id/journal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="viewJournal"
            android:text="@string/journal" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <Button
            android:id="@+id/analysis_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="viewAnalysis"
            android:text="@string/analysis" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <Button
            android:id="@+id/pantry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="viewPantry"
            android:text="@string/pantry" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <Button
            android:id="@+id/recommender_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:onClick="viewRecommender"
            android:text="@string/recommender" />
    </TableRow>

</TableLayout>
</ScrollView>